--- a/Profile/index.html
+++ b/Profile/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <link rel="stylesheet" type="text/css" href="css/my_style.css">
     <title>Peter Santiago's Simple Bio Page</title>
-    <meta name="description" content="My first bio-page assignment">
+    <meta name="description" content="My first bio-page assignment 2">
 </head>
 
 <body>
