--- a/Profile/index.html
+++ b/Profile/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <link rel="stylesheet" type="text/css" href="css/my_style.css">
-    <title>Peter Santiago's Simple Bio Page</title>
+    <title>Peter Santiago's Simple Bio Page 2</title>
     <meta name="description" content="My first bio-page assignment 2">
 </head>
 
@@ -53,7 +53,7 @@
     <!-- footer bar parameters -->
 
     <div class="f_body">
-        <p>Copyright &copy</p>
+        <p>Copyright 2023 &copy</p>
         <div class="f_trim">
         </div>
     </div>
